# Graph_Algo

./: .gitignore
algo/BellmanFord/: BellmanFord.cpp  BellmanFordCL.cpp  BellmanFordCL.h  BellmanFordCL_impl.cpp  CMakeLists.txt  testGraph.cpp
algo/BellmanFord/kernel_src/: BellmanFordCL_kernel.cl
algo/ConnectedComponent/: CMakeLists.txt  ConnectedComponentCL.cpp  ConnectedComponentCL.h  ConnectedComponentCL_impl.cpp
algo/ConnectedComponent/kernel_src/: ConnectedComponentCL_kernel.cl
algo/LabelPropagation/: CMakeLists.txt  LabelPropagation.cpp  LabelPropagationCL.cpp  LabelPropagationCL.h  LabelPropagationCL_impl.cpp
algo/LabelPropagation/kernel_src/: LabelPropagationCL_kernel.cl
algo/PageRank/: CMakeLists.txt  PageRankCL.cpp  PageRankCL.h  PageRankCL_impl.cpp  PageRankGPU.cpp
algo/PageRank/kernel_src/: PageRankCL_kernel.cl  PageRankCL_kernle.cl
srv/: CMakeLists.txt  UtilClient.cpp
srv/impl/: UtilServer_implCL.cpp
test/: BellmanFordCL_Test.cpp  CMakeLists.txt  ConnectedComponentCL_Test.cpp  LabelPropagationCL_Test.cpp  PageRankCL_Test.cpp  UtilServerTest_BellmanFordCL.cpp  UtilServerTest_ConnectedComponentCL.cpp  UtilServerTest_LabelPropagationCL.cpp  UtilServerTest_PageRankCL.cpp
